--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,11 @@ body {
   text-align: justify;
 }
 
+.skills__container {
+  display: flex;
+  justify-content: space-around;
+}
+
 .skills__header {
   color: var(--secondary-text-color);
   text-align: center;
